Changing the DHTStats registration process a bit so that RouteTable doesn't need the Context to init its stats.